data/derived/comb/progs/unify/prog6150.ml.out
Characters 437-444:
  | Square(e) -> "%s*%s" exprToString e exprToString e;;
                 ^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
